# TaoLoop

./: .env.example  .gitignore  README.md  experiment_final.json  experiment_progress.json  go.mod  pyproject.toml  start_zhouxing.bat  脚本异步.txt
cmd/zhouxing/: main.go
internal/tui/: backend.go  model.go  model_test.go
sandbox/: README.md  check_results.py  check_wins.py  cli_tool_test.py  demo_minesweeper.py  experiment_final.json  experiment_progress.json  experiment_short_final.json  experiment_short_progress.json  minesweeper_game.py  minesweeper_nn.py  monitor_training.py  physics_sim_test.py  physics_simulation.py  physics_simulation_short.py  quick_test.py  requirements.txt  simple_demo.py  simple_monitor.py  simple_physics_test.py  test_environment.py  test_output.json  test_physics_simulation.py  test_psutil.py  test_short_simulation.py  test_tools.py  train_easy.py  train_minesweeper.py  train_minesweeper_fixed.py  training_summary.md  two_minute_script.py
sandbox/models/minesweeper_9x9_10/: training_stats.npz
scripts/: e2e_fallback_followup.py  smoke_async_prompt.py  smoke_backend.py
tests/: test_regressions.py
zhouxing/: agent.py  backend.py  background_jobs.py  config.py  context.py  fallbacks.py  llm.py  logging_utils.py  message_buffer.py  monitor.py  sessions.py  tools.py
