[project]
name = "zhouxing"
version = "0.1.0"
description = "ZhouXing scientific agent CLI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gputil>=1.4.0",
  "httpx>=0.28.1",
  "matplotlib>=3.10.8",
  "numpy>=2.4.3",
  "pandas>=3.0.1",
  "psutil>=7.0.0",
  "scipy>=1.17.1",
  "setuptools>=82.0.1",
  "torch",
  "torchaudio>=2.10.0",
  "torchvision",
  "tqdm>=4.67.3",
]

[project.scripts]
zhouxing-backend = "zhouxing.backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
